additional fixes to sofabaton-x-server
